[AV2-668] fixed alignment issue. and check about multiple file drang and drop issue.

--- a/src/app/questions/file/file-display/file-display.component.scss
+++ b/src/app/questions/file/file-display/file-display.component.scss
@@ -10,6 +10,7 @@ video {
 
 .file-details {
   --ion-grid-column-padding: 0;
+  --ion-grid-padding: 0;
   margin-top: 12px;
   ion-icon {
     font-size: 24px;
